<resources>
    <string name="app_name">JustJava</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="price">price</string>
    <string name="order_summary">Order Summary</string>
    <string name="orderButton">order</string>
    <string name="total">Total:</string>
    <string name="thank">Thank you!</string>
    <string name="whipped">Whipped cream</string>
    <string name="choco">Chocolate</string>
    <string name="nameHint">Name</string>
</resources>
